1. Added 3 Components - Card, Container 2. Modified index.css App.css 3. Added Media Query for Mobile and Tablet Portrait portability

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
+
+@font-face {
+  font-family: lato;
+  src: url('./Fonts/Lato-Regular.ttf');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+
+  font-family: lato;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+html{
+  font-size: 62.5%;
+}
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: lato
 }
